[tool.poetry]
name = "category-listing"
version = "0.1.0"
description = ""
authors = ["Gatalist <kostencko.alexander2012@gmail.com>"]
readme = "README.md"
packages = [{include = "category_listing"}]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
openpyxl = "^3.1.2"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
somecomand = "main:parse_one_row"